crates/rustframe/tests/ui/fail/non_async_route.stderr
error: route handlers must be async
  --> tests/ui/fail/non_async_route.rs:11:5
   |
11 |     fn invalid(&self) -> Result<(), HttpError> {
   |     ^^
